@@ -10,9 +10,17 @@
 
 static const char* FILE_NAME = "Net/SSLeay/OCSP_SINGLERESP.c";
 
-int32_t SPVM__Net__SSLeay__OCSP_SINGLERESP__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Net__SSLeay__SSL_CTX__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  OCSP_SINGLERESP* pointer = env->get_pointer(env, stack, obj_self);
+  
+  if (!env->no_free(env, stack, obj_self)) {
+    OCSP_SINGLERESP_free(pointer);
+  }
   
   return 0;
 }
-
-
